# NimbleML

./: .gitignore  README.md  benchmark.py  gpt_common.py  playground.py  pyproject.toml  test.py  train_gpt.py  train_mnist.py
NimbleML/: __init__.py  _native_loader.py  core.py  trainer.py
NimbleML/Utils/: __init__.py  gradcheck.py  np_backend.py  saveload.py  tensor.py
NimbleML/activations/: __init__.py  gelu.py  relu.py  softmax.py
NimbleML/data/: __init__.py  chat_dataset.py  dataloader.py  dataset.py  mnist.py  text.py  tiny_corpus.txt  tokenizer.json  tokenizer.py  tokenizer_512.json
NimbleML/data/text/: BPETokenizer.py  __init__.py  char_tokenizer.py
NimbleML/kernels/: __init__.py  _native_bridge.py  embedding_scatter.py  fused_crossentropy.py  fused_gelu.py  fused_rmsnorm.py  fused_sdpa.py  fused_tied_crossentropy.py  sampled_softmax.py  torch_sdpa.py
NimbleML/layers/: __init__.py  _ops.py  conv2D.py  conv2d.py  dense.py  dropout.py  embedding.py  flatten.py  layer_norm.py  maxpool2D.py  maxpool2d.py  rms_norm.py
NimbleML/losses/: __init__.py  _ce_prepare.py  cross_entropy.py  regression.py  sampled_cross_entropy.py
NimbleML/metrics/: __init__.py  classification.py  regression.py
NimbleML/models/: __init__.py  generate.py  gpt.py
NimbleML/neural_network/: __init__.py  _fused_arrays.py  attention.py  feed_forward.py  module.py  transformer.py  transformer_fused.py
NimbleML/nn/activations/: gelu.py  softmax.py
NimbleML/nn/layers/: conv2d.py  layer_norm.py
NimbleML/optim/: sgd.py
NimbleML/optimizers/: RMSProp.py  __init__.py  adam.py  nag.py  optimizer.py  rmsprop.py  schedulers.py  sgd.py  sgdm.py
NimbleML/optimizers/schedulers/: __init__.py  base.py  cosine_annealing.py  linear_warmup.py  stepLR.py  step_lr.py
NimbleML/utils/: __init__.py  activations.py  amp.py  autograd_profile.py  axis.py  bpe.py  clip_grad.py  grad_mode.py  gradcheck.py  mask.py  np_backend.py  rope.py  saveload.py  shape.py  tensor.py
benchmarks/: README.md  _nimble_train.py  _timing.py  _torch_ref.py  benchmark_results.txt  config.py  forward_only.py  train_throughput.py
native/: CMakeLists.txt
native/include/nimbleml/: autograd.hpp  kernels.hpp
native/src/: adamw.cpp  amp.cpp  autograd.cpp  buffer.cpp  crossentropy.cpp  gelu.cpp  kernels_cuda.cu  module.cpp  rmsnorm.cpp  scatter.cpp  sdpa.cpp  sdpa_cuda.cu
tests/: _gpu_smoke_runner.py  benchmark_ops.py  test.py  test_gpu_train_smoke.py  test_gradcheck.py  test_kernels.py  test_tokenizer.py
tests_tmp_tokenizer/: tokenizer.json  vocab.txt
toyGPT/: _diag.py  checkpoint.py  commands.txt  config.py  data.py  fast_tokenizer.py  fineweb.py  generate.py  gpt_toy_config.toml  inference.py  playground.py  prepare_data.py  sampling.py  train_gpt.py  train_utils.py
