[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NimbleML"
version = "0.1.0"
description = "A lightweight machine learning library for neural networks from scratch."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Raymond Zheng" }]
dependencies = ["numpy>=1.24"]
keywords = ["machine-learning", "deep-learning", "autograd", "neural-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
gpu = ["cupy-cuda11x>=12.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["NimbleML*"]
